--- a/site/index.html
+++ b/site/index.html
@@ -1,228 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>The Links Of Alan</title>
+        <title>The Links Of Alan</title>
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Links Of Alan" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site:id" content="@TheIdOfAlan" />
-    <meta name="twitter:creator" content="@TheIdOfAlan" />
-    <meta
-      name="description"
-      content="The various places I've put stuff on the web."
-    />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="The Links Of Alan" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site:id" content="@TheIdOfAlan" />
+        <meta name="twitter:creator" content="@TheIdOfAlan" />
+        <meta
+            name="description"
+            content="The various places I've put stuff on the web."
+        />
 
-    <meta
-      property="og:description"
-      content="The various places I've put stuff on the web."
-    />
+        <meta
+            property="og:description"
+            content="The various places I've put stuff on the web."
+        />
 
-    <meta
-      property="og:image"
-      content="https://links.alanwsmith.com/assets/og-images/main.png"
-    />
+        <meta
+            property="og:image"
+            content="https://links.alanwsmith.com/assets/og-images/main.png"
+        />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicons/16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicons/32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/assets/favicons/96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="/assets/favicons/128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="196x196"
-      href="/assets/favicons/196x196.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="228x228"
-      href="/assets/favicons/228x228.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="152x152"
-      href="/assets/favicons/152x152.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="167x167"
-      href="/assets/favicons/167x167.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="180x180"
-      href="/assets/favicons/180x180.png"
-    />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/assets/favicons/16x16.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/assets/favicons/32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="/assets/favicons/96x96.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="128x128"
+            href="/assets/favicons/128x128.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="196x196"
+            href="/assets/favicons/196x196.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="228x228"
+            href="/assets/favicons/228x228.png"
+        />
+        <link
+            rel="apple-touch-icon-precomposed"
+            sizes="152x152"
+            href="/assets/favicons/152x152.png"
+        />
+        <link
+            rel="apple-touch-icon-precomposed"
+            sizes="167x167"
+            href="/assets/favicons/167x167.png"
+        />
+        <link
+            rel="apple-touch-icon-precomposed"
+            sizes="180x180"
+            href="/assets/favicons/180x180.png"
+        />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Roboto:ital,wght@1,300&display=swap"
-      rel="stylesheet"
-    />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Roboto:ital,wght@1,300&display=swap"
+            rel="stylesheet"
+        />
 
-    <style>
-      body {
-        background-color: #0a100d;
-        color: #d6d5c9;
-        font-family: 'Inter', sans-serif;
-        font-size: 1.1rem;
-        font-weight: 300;
-        line-height: 1.4rem;
-        margin: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-        padding-left: 14px;
-        padding-right: 14px;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
+        <style>
+            body {
+                background-color: #0a100d;
+                color: #d6d5c9;
+                font-family: 'Inter', sans-serif;
+                font-size: 1.1rem;
+                font-weight: 300;
+                line-height: 1.4rem;
+                margin: 0;
+                padding-top: 0;
+                padding-bottom: 0;
+                padding-left: 14px;
+                padding-right: 14px;
+                min-height: 100vh;
+                display: flex;
+                flex-direction: column;
+            }
 
-      a {
-        color: #99e1d9;
-        text-decoration: none;
-      }
+            a {
+                color: #99e1d9;
+                text-decoration: none;
+            }
 
-      blockquote {
-        font-family: 'Roboto', sans-serif;
-        padding-bottom: 12px;
-      }
+            blockquote {
+                font-family: 'Roboto', sans-serif;
+                padding-bottom: 12px;
+            }
 
-      dd {
-        padding-top: 1rem;
-      }
+            dd {
+                padding-top: 1rem;
+            }
 
-      dt {
-        padding-top: 1rem;
-      }
+            dt {
+                padding-top: 1rem;
+            }
 
-      h1 {
-        font-size: 2.1rem;
-        font-weight: 700;
-        padding-bottom: 1.2rem;
-        margin: 0;
-        padding-top: 8px;
-        border-bottom: 1px solid #d69f13;
-      }
+            h1 {
+                font-size: 2.1rem;
+                font-weight: 700;
+                padding-bottom: 1.2rem;
+                margin: 0;
+                padding-top: 8px;
+                border-bottom: 1px solid #d69f13;
+            }
 
-      h2 {
-        font-size: 1.45rem;
-        font-weight: 700;
-        margin-top: 3px;
-        padding-top: 0.6rem;
-        padding-bottom: 0.6rem;
-        margin-bottom: 1.8rem;
-        border-top: 1px solid gray;
-        border-bottom: 1px solid gray;
-      }
+            h2 {
+                font-size: 1.45rem;
+                font-weight: 700;
+                margin-top: 3px;
+                padding-top: 0.6rem;
+                padding-bottom: 0.6rem;
+                margin-bottom: 1.8rem;
+                border-top: 1px solid gray;
+                border-bottom: 1px solid gray;
+            }
 
-      h3 {
-        font-size: 1.3rem;
-        margin: 0;
-        padding-top: 2rem;
-        padding-bottom: 3px;
-        border-bottom: 1px solid #d69f13;
-      }
+            h3 {
+                font-size: 1.3rem;
+                margin: 0;
+                padding-top: 2rem;
+                padding-bottom: 3px;
+                border-bottom: 1px solid #d69f13;
+            }
 
-      h4 {
-        font-size: 1.5rem;
-        padding-bottom: 0px;
-        margin-bottom: 0px;
-      }
+            h4 {
+                font-size: 1.5rem;
+                padding-bottom: 0px;
+                margin-bottom: 0px;
+            }
 
-      header {
-        flex-shrink: 0;
-        margin: 0 auto;
-        max-width: 62ch;
-        flex-direction: column;
-        width: 100%;
-        padding-top: 18px;
-      }
+            header {
+                flex-shrink: 0;
+                margin: 0 auto;
+                max-width: 62ch;
+                flex-direction: column;
+                width: 100%;
+                padding-top: 18px;
+            }
 
-      main {
-        flex-grow: 1;
-        margin: 0 auto;
-        max-width: 62ch;
-      }
+            main {
+                flex-grow: 1;
+                margin: 0 auto;
+                max-width: 62ch;
+            }
 
-      footer {
-        flex-shrink: 0;
-        width: 100%;
-        max-width: 62ch;
-        margin: 0 auto;
-        font-size: 0.82rem;
-        padding-bottom: 24px;
-        margin-top: 30px;
-        text-align: center;
-      }
+            footer {
+                flex-shrink: 0;
+                width: 100%;
+                max-width: 62ch;
+                margin: 0 auto;
+                font-size: 0.82rem;
+                padding-bottom: 24px;
+                margin-top: 30px;
+                text-align: center;
+            }
 
-      .spacer {
-        text-align: center;
-        padding-top: 30px;
-        padding-bottom: 70px;
-        border-bottom: 1px solid #d69f13;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>The Links Of Alan</h1>
-    </header>
-    <main>
-      <p>Hi there! Welcome to my links page.</p>
-      <p>
-        This page originally included a piece called
-        <a
-          href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-          >How To Grow Your Digital Garden With Sub-Domains</a
-        >. I liked having it here, but it's a few minute read. It felt like
-        folks wouldn't get past it to the actual links. So, off it went. I'm
-        still proud of it. If you're looking for encouragement and some
-        direction to getting moving with web dev it's worth a read.
-      </p>
+            .spacer {
+                text-align: center;
+                padding-top: 30px;
+                padding-bottom: 70px;
+                border-bottom: 1px solid #d69f13;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>The Links Of Alan</h1>
+        </header>
+        <main>
+            <p>Hello! Welcome to my links page.</p>
+            <p>
+                This page originally included a piece called
+                <a
+                    href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
+                    >How To Grow Your Digital Garden With Sub-Domains</a
+                >. It's worth a read if you're looking to get started with your
+                own digital garden.
+            </p>
 
-      <p>
-        As for my links, my main site is at
-        <a href="https://www.alanwsmith.com">alanwsmith.com</a>. I'm on
-        <a href="https://twitter.com/TheIdOfAlan">Twitter</a>,
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a>,
-        <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">Mastodon</a>
-        and the occasional
-        <a href="https://podcast.alanwsmith.com/">podcast</a>.
-      </p>
+            <p>
+                I'm on
+                <a href="https://www.twitch.tv/theidofalan">Twitch</a>,
+                <a rel="me" href="https://hachyderm.io/@TheIdOfAlan"
+                    >Mastodon</a
+                >
+                and occasionaly do a
+                <a href="https://podcast.alanwsmith.com/">podcast</a>. But, the
+                real point of this page is the various sub-domains that make up
+                my Digital Garden. Here's the places I put stuff on the web
+                (some of them don't have much, but that's how gardens grow)
+            </p>
 
-      <p>
-        But, the real point of this page is to point you to the various
-        sub-domains that make up my Digital Garden. So, without further ado,
-        here's the places I put stuff on the web:
-      </p>
-
-      <dl>
+            <dl>
 <dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
@@ -285,6 +280,14 @@
 </dt>
 <dd>
 <p>A place to mess around with D3. Just getting started on this one: TODO: Move this one to d3-cookbook</p>
+</dd>
+
+<dt>
+<h4><a href="https://decovar-random.alanwsmith.com/">Decovar Random</a></h4>
+<div class="url_display"><a href="https://decovar-random.alanwsmith.com/">decovar-random.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>This is the second experiment (that I like better) of randomly adjusting a variables on a variable font. This one is Decovar. (The first was Roboto Flex which is linked below).</p>
 </dd>
 
 <dt>
@@ -448,7 +451,7 @@ might be interesting to post them</p>
 </dd>
 
 <dt>
-<h4><a href="http://markdowntable.com/">Markdown Table Makder</a></h4>
+<h4><a href="http://markdowntable.com/">Markdown Table Maker</a></h4>
 <div class="url_display"><a href="http://markdowntable.com/">markdowntable.com</a></div>
 </dt>
 <dd>
@@ -652,15 +655,16 @@ connected and what I'm doing</p>
 <p>A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a></p>
 </dd>
 </dl>
-    </main>
-    <footer>
-      ~<br />
-      made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a><br />
-      who has a <a href="https://www.alanwsmith.com/">website</a> and a
-      <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some other
-      stuff<br />but you already know about that since you're here <br />and now
-      with more
-      <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>!
-    </footer>
-  </body>
+        </main>
+        <footer>
+            ~<br />
+            made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a
+            ><br />
+            who has a <a href="https://www.alanwsmith.com/">website</a> and a
+            <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some
+            other stuff<br />but you already know about that since you're here
+            <br />and now with more
+            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>!
+        </footer>
+    </body>
 </html>
