Added typing rust

--- a/site/index.html
+++ b/site/index.html
@@ -637,6 +637,14 @@ my brain works</p>
 </dd>
 
 <dt>
+<h4><a href="https://typing-rust.alanwsmith.com/">Typing Rust</a></h4>
+<div class="url_display"><a href="https://typing-rust.alanwsmith.com/">typing-rust.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>The site I'm building to help me learn rust. Also, playing around with an idea I've had for a while to make live tutorial typo detection.</p>
+</dd>
+
+<dt>
 <h4><a href="https://yabai.alanwsmith.com/">Yabai Automation</a></h4>
 <div class="url_display"><a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a></div>
 </dt>
