--- a/site/index.html
+++ b/site/index.html
@@ -546,6 +546,14 @@ as possible</p>
 </dd>
 
 <dt>
+<h4><a href="https://rust-notes.alanwsmith.com/">Rust Notes</a></h4>
+<div class="url_display"><a href="https://rust-notes.alanwsmith.com/">rust-notes.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My collection of notes for learning Rust. Publishing the entire set as a stand alone site to help me learn better through the process of writing.</p>
+</dd>
+
+<dt>
 <h4><a href="https://static-template.alanwsmith.com/">Static HTML Site Template</a></h4>
 <div class="url_display"><a href="https://static-template.alanwsmith.com/">static-template.alanwsmith.com</a></div>
 </dt>
@@ -641,7 +649,7 @@ my brain works</p>
 <div class="url_display"><a href="https://typing-rust.alanwsmith.com/">typing-rust.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>The site I'm building to help me learn rust. Also, playing around with an idea I've had for a while to make live tutorial typo detection.</p>
+<p>This is my original Rust Notes site where I was going to have a tool to help you type code examples in correctly. I'm punting on it in favor of <a href="https://rust-notes.alanwsmith.com/">Rust Notes</a>.</p>
 </dd>
 
 <dt>
