turned off surftech.tv

--- a/site/index.html
+++ b/site/index.html
@@ -564,8 +564,8 @@ JS samples</p>
 </dd>
 
 <dt>
-<h4><a href="https://www.surftech.tv/">SurfTech.tv</a></h4>
-<div class="url_display"><a href="https://www.surftech.tv/">surftech.tv</a></div>
+<h4><strike>SurfTech.tv</strike></h4>
+<div class="url_display"><strike>surftech.tv</strike></div>
 </dt>
 <dd>
 <p>This is a little project I built for myself so that when I've got a
