Updated how to grow link

--- a/site/index.html
+++ b/site/index.html
@@ -198,7 +198,7 @@
             <p>
                 This page originally included a piece called
                 <a
-                    href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
+                    href="https://www.alanwsmith.com/en/28dakarf/?how-to-grow-your-digital-garden-with-subdomains"
                     >How To Grow Your Digital Garden With Sub-Domains</a
                 >. It's worth a read if you're looking to get started with your
                 own digital garden.
