Added djano and color scheme switcher sites

--- a/scripts/page_builder/template.html
+++ b/scripts/page_builder/template.html
@@ -221,13 +221,12 @@
         </main>
         <footer>
             ~<br />
-            made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a
-            ><br />
-            who has a <a href="https://www.alanwsmith.com/">website</a> and a
-            <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some
+            made by alan w. smith who's on 
+            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>
+            <br />
+            and has a <a href="https://www.alanwsmith.com/">website</a> a
+            <a href="https://podcast.alanwsmith.com/">podcast</a> and some
             other stuff<br />but you already know about that since you're here
-            <br />and now with more
-            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>!
         </footer>
     </body>
 </html>
