--- a/site/index.html
+++ b/site/index.html
@@ -198,7 +198,7 @@
             <p>
                 This page originally included a piece called
                 <a
-                    href="https://www.alanwsmith.com/en/28dakarf/?how-to-grow-your-digital-garden-with-subdomains"
+                    href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
                     >How To Grow Your Digital Garden With Sub-Domains</a
                 >. It's worth a read if you're looking to get started with your
                 own digital garden.
@@ -218,6 +218,14 @@
             </p>
 
             <dl>
+<dt>
+<h4><a href="https://867-5309.alanwsmith.com">867-5309</a></h4>
+<div class="url_display"><a href="https://867-5309.alanwsmith.com">867-5309.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it.</p>
+</dd>
+
 <dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
@@ -275,6 +283,14 @@
 </dd>
 
 <dt>
+<h4><a href="https://color-scheme-switcher.alanwsmith.com/">Color Scheme Switcher (Vanilla JavaScript)</a></h4>
+<div class="url_display"><a href="https://color-scheme-switcher.alanwsmith.com/">color-scheme-switcher.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Some vanilla JavaScript designed to switch color schemes while preventing a Flash Of Unstyled Content (FOUC).</p>
+</dd>
+
+<dt>
 <h4><a href="https://d3-playground.alanwsmith.com/">D3 Playground</a></h4>
 <div class="url_display"><a href="https://d3-playground.alanwsmith.com/">d3-playground.alanwsmith.com</a></div>
 </dt>
@@ -288,6 +304,14 @@
 </dt>
 <dd>
 <p>This is the second experiment (that I like better) of randomly adjusting a variables on a variable font. This one is Decovar. (The first was Roboto Flex which is linked below).</p>
+</dd>
+
+<dt>
+<h4><a href="https://django.alanwsmith.com/">Django Notes And Tutorials</a></h4>
+<div class="url_display"><a href="https://django.alanwsmith.com/">django.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I struggled a lot with the offical Django Tutorial. These are notes, boilerplates, and tutorials I put toghter to teach myself (and hopefully make it easier for other folks to learn).</p>
 </dd>
 
 <dt>
@@ -674,13 +698,12 @@ connected and what I'm doing</p>
         </main>
         <footer>
             ~<br />
-            made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a
-            ><br />
-            who has a <a href="https://www.alanwsmith.com/">website</a> and a
-            <a href="https://podcast.alanwsmith.com/">podcast</a> <br />and some
+            made by alan w. smith who's on 
+            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>
+            <br />
+            and has a <a href="https://www.alanwsmith.com/">website</a> a
+            <a href="https://podcast.alanwsmith.com/">podcast</a> and some
             other stuff<br />but you already know about that since you're here
-            <br />and now with more
-            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>!
         </footer>
     </body>
 </html>
