--- a/site/index.html
+++ b/site/index.html
@@ -223,7 +223,7 @@
 <div class="url_display"><a href="https://867-5309.alanwsmith.com">867-5309.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it.</p>
+<p>Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it. The main point of the page is to experiment with a technique for having a blurred background based off the video that's playing.</p>
 </dd>
 
 <dt>
