Added html-template and adjusted footer

--- a/scripts/page_builder/template.html
+++ b/scripts/page_builder/template.html
@@ -220,13 +220,9 @@
             <dl>$DETAILS</dl>
         </main>
         <footer>
-            ~<br />
-            made by alan w. smith who's on 
-            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>
-            <br />
-            and has a <a href="https://www.alanwsmith.com/">website</a> a
-            <a href="https://podcast.alanwsmith.com/">podcast</a> and some
-            other stuff<br />but you already know about that since you're here
+            <div>
+                made by <a href="https://www.alanwsmith.com">alan w smith</a>
+            </div>
         </footer>
     </body>
 </html>
