--- a/site/index.html
+++ b/site/index.html
@@ -400,6 +400,14 @@ inspired by
 </dd>
 
 <dt>
+<h4><a href="https://html-template.alanwsmith.com">HTML Template</a></h4>
+<div class="url_display"><a href="https://html-template.alanwsmith.com">html-template.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My new starter template for making a site without using a third-party framework.</p><p>I didn't realize till posting this that I already had the 'static-template' domain set up. That name didn't stick in my head though and I'm cool with starting fresh regardless.</p>
+</dd>
+
+<dt>
 <h4><a href="https://ideas.alanwsmith.com/">Ideas, Ideas, Ideas!</a></h4>
 <div class="url_display"><a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a></div>
 </dt>
@@ -677,6 +685,14 @@ my brain works</p>
 </dd>
 
 <dt>
+<h4><a href="https://waveform.alanwsmith.com">Waveform Display</a></h4>
+<div class="url_display"><a href="https://waveform.alanwsmith.com">waveform.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A work in progress. Making a waveform display to use when making screen recordings</p>
+</dd>
+
+<dt>
 <h4><a href="https://yabai.alanwsmith.com/">Yabai Automation</a></h4>
 <div class="url_display"><a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a></div>
 </dt>
@@ -694,16 +710,20 @@ connected and what I'm doing</p>
 <dd>
 <p>A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a></p>
 </dd>
+
+<dt>
+<h4><a href="https://yt-player.alanwsmith.com">YouTube Player Web Component</a></h4>
+<div class="url_display"><a href="https://yt-player.alanwsmith.com">yt-player.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>The web component I use to embed videos on my sites. It provides control buttons for play/pause/stop, mute/unmute, and changing playback speeds. It also sets a data attribute on the body tag that can be used to do things like dim the rest of the page when a video is playing</p>
+</dd>
 </dl>
         </main>
         <footer>
-            ~<br />
-            made by alan w. smith who's on 
-            <a rel="me" href="https://hachyderm.io/@TheIdOfAlan">mastodon</a>
-            <br />
-            and has a <a href="https://www.alanwsmith.com/">website</a> a
-            <a href="https://podcast.alanwsmith.com/">podcast</a> and some
-            other stuff<br />but you already know about that since you're here
+            <div>
+                made by <a href="https://www.alanwsmith.com">alan w smith</a>
+            </div>
         </footer>
     </body>
 </html>
